--- a/build.xml
+++ b/build.xml
@@ -88,7 +88,7 @@
     <!-- Where to store the Win32 executable.                                                                        -->
     <property name="dist.exe"             value="${dist}/trolCommander.exe"/>
     <!-- Where to store the OS X executable.                                                                         -->
-    <property name="dist.app.name.short"  value="trolCommander"/>                                                       
+    <property name="dist.app.name.short"  value="trolCommander"/>
     <property name="dist.app.name"        value="${dist.app.name.short}.app"/>
     <property name="dist.app"             value="${dist}/${dist.app.name}"/>
     <!-- Ivy dependencies retrieval pattern.                                                                         -->
@@ -127,7 +127,7 @@
 
 
     <!-- = Compilation targets ===================================================================================== -->
-    <!-- =========================================================================================================== 
+    <!-- ===========================================================================================================
     retrieve-runtime,retrieve-compile-->
     <target name="compile" depends="load-properties"
             description="Compiles the library's sources">
@@ -135,6 +135,9 @@
         <mkdir dir="${tmp.main}"/>
         <mkdir dir="${javac.reports}"/>
         <record name="${javac.reports}/javac.log" action="start"/>
+        <fileset dir="." includes="*/build.xml"/>
+        <!-- <ant antfile="src/main/com/mucommander/commons/file/impl/vsphere/build.xml" target="compile" /> -->
+
         <javac destdir="${tmp.main}" debug="on" deprecation="on"
                encoding="${source.encoding}" source="${source.version}" target="${source.version}"
                srcdir="${src.main}">
@@ -262,21 +265,21 @@
         </tar>
     </target>
 
-	<taskdef 
-	    name="bundleapp" 
-	    classname="com.oracle.appbundler.AppBundlerTask" 
+	<taskdef
+	    name="bundleapp"
+	    classname="com.oracle.appbundler.AppBundlerTask"
 		 classpathref="lib.tools" />
 
     <target name="app" depends="load-muant, compress">
         <echo>Creating Mac OS X application...</echo>
-	    <bundleapp 
-	        outputdirectory="${dist}" 
-	        name="${dist.app.name.short}" 
-	        displayname="trolCommander" 
-	        identifier="com.mucommander.trolCommander" 
+	    <bundleapp
+	        outputdirectory="${dist}"
+	        name="${dist.app.name.short}"
+	        displayname="trolCommander"
+	        identifier="com.mucommander.trolCommander"
 	        shortversion="${app.version}"
 	        applicationCategory="public.app-category.developer-tools"
-	        mainclassname="${app.main}" 
+	        mainclassname="${app.main}"
 	    	copyright="trolCommander ${app.version}, (c) ${app.copyright} ${app.vendor}, ${url.homepage}"
 	    	icon="${res.package}/osx/icon.icns" >
 	        <classpath file="${dist.jar}" />
@@ -286,19 +289,19 @@
 	    	<option value="-Dcom.apple.smallTabs=true" />
 	    	<option value="-Dcom.apple.hwaccel" />
 	    	<option value="-Dapple.laf.useScreenMenuBar=true"/>
-	    	<option value="-Dfile.encoding=UTF-8"/>   
-	    	
+	    	<option value="-Dfile.encoding=UTF-8"/>
+
 			<!-- Bundle the JRE with the App Package -->
 			<!--<runtime dir="${env.JAVA_HOME}" />-->
-	    	
+
 	    </bundleapp>
-    	
+
     	<replace file="${dist}/${dist.app.name}/Contents/Info.plist">
     	                <replacetoken><![CDATA[</dict>]]></replacetoken>
     	                <replacevalue><![CDATA[<key>NSHighResolutionCapable</key><true/>]]></replacevalue>
-    	                <replacevalue><![CDATA[<key>NSSupportsAutomaticGraphicsSwitching</key><true/></dict>]]></replacevalue>    	                
+    	                <replacevalue><![CDATA[<key>NSSupportsAutomaticGraphicsSwitching</key><true/></dict>]]></replacevalue>
     	</replace>
-    	
+
     </target>
 
 
@@ -348,7 +351,7 @@
         <launch4j>
  <!-- customprocname="true" -->
             <config headertype="gui" outfile="${dist.exe}" jarpath="trolcommander.jar"
-                    icon="${res.package}/windows/trolcommander.ico" dontwrapjar="true" chdir="." 
+                    icon="${res.package}/windows/trolcommander.ico" dontwrapjar="true" chdir="."
                     supporturl="${url.homepage}">
                 <jre minversion="${source.version}.0">
                     <opt>-Djava.system.class.loader=com.mucommander.commons.file.AbstractFileClassLoader</opt>
@@ -490,7 +493,7 @@
         </copy>
         <copy tofile="${tmp.deb}/data/usr/share/pixmaps/trolcommander.png" overwrite="true">
             <fileset file="${res.runtime}/images/trolcommander/icon128_24.png"/>
-        </copy> 
+        </copy>
 
         <!-- Generates the data.tar.gz file.                       -->
         <tar destfile="${tmp.deb}/data.tar.gz" compression="gzip">
@@ -630,7 +633,7 @@
 
         <!-- Fix Proguard bug - replace files to orignal -->
         <copy file="${tmp.libs}/jcifs/smb/SmbFile.class" tofile="${tmp.obf}/jcifs/smb/SmbFile.class" overwrite="true"/>
-        
+
         <exec executable="${7za.executable}" dir="${tmp.obf}" failonerror="true">
             <arg value="a"/>
             <arg value="-tzip"/>
@@ -695,22 +698,22 @@
         <echo>Creating obfuscated JAR file...</echo>
         <mkdir dir="${reports.proguard}"/>
         <taskdef resource="proguard/ant/task.properties" classpathref="lib.tools"/>
-        <proguard 
-			overloadaggressively="false" 
-			ignorewarnings="true" 
-			optimize="false" 
-			shrink="true" 
+        <proguard
+			overloadaggressively="false"
+			ignorewarnings="true"
+			optimize="false"
+			shrink="true"
 			obfuscate="false"
-               allowaccessmodification="false" 
-               skipnonpubliclibraryclasses="false" 
-               printmapping="${reports.proguard}/mapping.txt" 
+               allowaccessmodification="false"
+               skipnonpubliclibraryclasses="false"
+               printmapping="${reports.proguard}/mapping.txt"
                printusage="${reports.proguard}/usage.txt"
-               printseeds="${reports.proguard}/seeds.txt" 
+               printseeds="${reports.proguard}/seeds.txt"
                target="${source.version}"
                repackageclasses=""
                verbose="true"
                preverify="true">
-               
+
             <injar  name="${jar.normal}"/>
             <outjar name="${jar.obf}"/>
 
@@ -722,7 +725,7 @@
             <libraryjar path="/Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home/jre/lib/classes.jar"/>
             <libraryjar path="/Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home/jre/lib/jsse.jar"/>
             <libraryjar path="/Library/Java/JavaVirtualMachines/jdk1.8.0_144.jdk/Contents/Home/jre/lib/jce.jar"/>
--->            
+-->
 
             <libraryjar refid="lib.compile"/>
 
@@ -751,7 +754,7 @@
                 <method name="*"/>
                 <constructor name="*"/>
             </keep>
-            
+
             <!-- Main class.                                                                                         -->
             <keep name="${app.main}">
                 <method access="public static" type="void" name="main" parameters="java.lang.String[]"/>
@@ -801,9 +804,9 @@
 			<keep name="org.apache.hadoop.hdfs.protocol.DatanodeInfo$AdminStates"/>
 			<!-- Apache Commons logging (Hadoop + JetS3t dependency).                                                -->
 			<keep name="org.apache.commons.logging.impl.LogFactoryImpl"/>
-<!--            
+<!--
 			<keep name="com.jidesoft.plaf.aqua.**">
--->            
+-->
 			<keep name="com.jidesoft.plaf.**">
 				<field name="*"/>
 				<method name="*"/>
@@ -852,29 +855,29 @@
 				<field name="*"/>
 				<method name="*"/>
 				<constructor name="*"/>
-			</keepclassmembers>			
+			</keepclassmembers>
 			<keep name="com.beust.jcommander.**" allowshrinking="false" allowoptimization="false" allowobfuscation="false">
 				<field name="*"/>
 				<method name="*"/>
 				<constructor name="*"/>
 			</keep>
 
-<!--			
+<!--
 
 			<keepclassmembers name="org.apache.batik.ext.swing.DoubleDocument" allowobfuscation="false" allowoptimization="false">
 				<field name="*"/>
 				<method name="*"/>
 				<constructor name="*"/>
-			</keepclassmembers>		
+			</keepclassmembers>
 			<keep name="org.apache.batik.ext.swing.DoubleDocument" allowobfuscation="false" allowoptimization="false">
 				<field name="*"/>
 				<method name="*"/>
 				<constructor name="*"/>
 			</keep>
-			
+
 
 					  com.sshtools.j2ssh.sftp.SftpSubsystemClient"
-                           com.sshtools.j2ssh.sftp.SshFxpSymlink	
+                           com.sshtools.j2ssh.sftp.SshFxpSymlink
 					  com.sshtools.j2ssh.sftp.SshFxpLStat.class
 -->
 
@@ -892,9 +895,9 @@
             <patternset>
                 <exclude name="**/*.html"/>
                 <exclude name="**/*.css"/>
-<!--                
+<!--
                 <exclude name="**/*.gif"/>
--->                
+-->
                 <exclude name="**/*.MF"/>
                 <exclude name="jcifs/util/mime.map"/>
                 <exclude name="META-INF/**/*"/>
@@ -903,7 +906,7 @@
 
         <mkdir dir="${dist}"/>
 
-        <!-- Retrieves the implementation version.                                                                 
+        <!-- Retrieves the implementation version.
         <exec executable="svnversion" failifexecutionfails="no" outputproperty="svn.version">
             <arg value="."/>
             <arg value="-n"/>
@@ -934,7 +937,7 @@
 
 
     <!-- = Documentation targets =================================================================================== -->
-    <!-- =========================================================================================================== 
+    <!-- ===========================================================================================================
     retrieve-runtime,-->
     <target name="javadoc" depends="release-prefixes">
         <echo>Creating API javadoc...</echo>
@@ -955,7 +958,7 @@
 
     <!-- = Reports targets ========================================================================================= -->
     <!-- =========================================================================================================== -->
-<!-- ivy -->    
+<!-- ivy -->
     <target name="reports" depends="checkstyle,pmd,cpd,javancss,findbugs,test" description="Generates all available reports."/>
 
 <!-- depends="retrieve-tools" -->
@@ -1166,7 +1169,7 @@
                 <pathelement location="${tmp.main}"/>
                 <path refid="lib.runtime"/>
             </classpath>
-<!--            
+<!--
             <jvmarg value="-verbose"/>
 -->
         </java>
